--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                     <p>This project is a first attempt at a website for a freelance ice cream shop.</p>
                     <a id="preview2" href="https://deft-liger-80131f.netlify.app/">Preview of the project</a>
                 </ul>
+                 <strong id="electronicsshop">Electronics shop 24/05/2023</strong> 
                 <ul>
                     <li>What does your project do?</li>
                     <p>This project is my second attempt at a website for a freelance shop, but in this case, it's an Electronics shop.</p>
