--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h2>About me</h2>
             <p>I'm a Web and Mobile App Developer and an Automation and Control student. I continue to train to cover all aspects of my career.</p>
             <p>During the past few years, I have had the opportunity to develop knowledge in different areas of programming, and I am currently in the second year of the Automation and Control degree. In addition, I have gained practical knowledge through projects.</p>
-            <p>I have always felt comfortable working in technological environments and developed a passion for staying updated on various daily advancements. I have sufficient autonomy to seek problem-solving strategies and can work on joint projects with colleagues in the field. .</p>
+            <p>I have always felt comfortable working in technological environments and developed a passion for staying updated on various daily advancements. I have sufficient autonomy to seek problem-solving strategies and can work on joint projects with colleagues in the field.</p>
         </section>
         <section id="proyects">
             <h2>Proyects</h2>
@@ -32,7 +32,7 @@
                     <strong id="Proyectname">Phasmophobia (24/10/2021)</strong>
                     <ul>
                         <li>What does your project do?</li>
-                        <p>This project aims to provide information about the video game called "Phasmophobia." .</p>
+                        <p>This project aims to provide information about the video game called "Phasmophobia."</p>
                     </ul>
                 </li>
                 <strong id="Proyectname">"The Gamer Nest"-Mobile Video game Store- (16/09/2023)</strong>
@@ -47,14 +47,14 @@
                   <p>This project is a website that provides information about the Argentine national football team and the location where the last World Cup was held.</p>
                   <a id="preview1" href="https://lascalonetamarianoalvarez.netlify.app">Preview of the project</a>
                 </ul>
-                <strong id="frozenmoon">"Frozen Moon"(Ice-cream shop) 14/04/2023</strong>           
+                <strong id="Proyectname">"Frozen Moon"(Ice-cream shop) 14/04/2023</strong>           
                 <ul>
                     <li>What does your project do?</li>
                     <p>This project is a first attempt at a website for a freelance ice cream shop.</p>
                     <a id="preview2" href="https://deft-liger-80131f.netlify.app/">Preview of the project</a>
                 </ul>
-                 <strong id="electronicsshop">Electronics shop 24/05/2023</strong> 
                 <ul>
+                    <strong id="Proyectname">"Electronics Shop" 14/04/2023</strong>           
                     <li>What does your project do?</li>
                     <p>This project is my second attempt at a website for a freelance shop, but in this case, it's an Electronics shop.</p>
                     <a id="preview2" href="https://comforting-croquembouche-c7f09d.netlify.app/index.html">Preview of the project</a>
